--- a/.gitmodules
+++ b/.gitmodules
@@ -679,3 +679,6 @@ url=https://github.com/bitfocus/companion-module-newbluefx-titler.git
 [submodule "lib/module/elgato-keylight"]
 	path = lib/module/elgato-keylight
 	url = https://github.com/bitfocus/companion-module-elgato-keylight.git
+[submodule "lib/module/presentationtools-cuetimer"]
+	path = lib/module/presentationtools-cuetimer
+	url = https://github.com/Engma90/companion-module-presentationtools-cueTimer.git
